Finish Chapter 2. Update Chapter 3.1

--- a/tex/sections/1-intro.tex
+++ b/tex/sections/1-intro.tex
@@ -39,7 +39,7 @@ A pre-requisite for any statistical analysis of shape is the ability to calculat
 In this thesis two established approaches to shape analysis will be combined:
 Firstly, the \emph{full Procrustes distance} and \emph{mean} are widely used for translation-, rotation-, and scaling-invariant analysis of landmark data \parencite[see e.g.][Chap.\ 4,\ 6]{DrydenMardia2016}.
 Secondly, \cite{SrivastavaEtAl2011} introduced a mathematical framework for the \emph{elastic} (re-parametrization invariant) shape analysis of curves, by using their square-root-velocity (SRV) representations.
-Taken together, both approaches allow for analysing curves in a fashion that is invariant to all four shape-preserving transformations, leading to an \emph{elastic full Procrustes distance} and \emph{mean}.
+Taken together, both approaches allow for analyzing curves in a fashion that is invariant to all four shape-preserving transformations, leading to an \emph{elastic full Procrustes distance} and \emph{mean}.
 As the full Procrustes mean has particularly nice properties in two dimensions, when identifying $\mathbb{R}^2$ with $\mathbb{C}$ \parencite[see][Chap.\ 8]{DrydenMardia2016}, this thesis will be restricted to the case of planar curves.
 
 While we are interested in modelling a (planar) object's geometrical information as a continous curve $\beta : [0,1] \rightarrow \mathbb{R}^2$, the curve itself is usually only observed as a discrete set of points $\beta(t_1), \beta(t_2), \dots, \beta(t_m)$.
